@@ -78,6 +78,19 @@ struct rd_logline {
   int  logline_hook_mode;
   int  logline_hook_start_point;
   int  logline_hook_end_point;
+  int  logline_event_length;
+  char logline_link_event_name[65];
+  char logline_link_starttime[13];
+  int  logline_link_start_slop;
+  int  logline_link_end_slop;
+  int  logline_link_id;
+  int  logline_link_embedded;
+  char logline_ext_starttime[13];
+  int  logline_ext_length;
+  char logline_ext_cart_name[33];
+  char logline_ext_data[33];
+  char logline_ext_event_id[33];
+  char logline_ext_annc_type[9];
 };
 
 int RD_ListLog(struct rd_logline *logline[],
